--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 __pycache__/
 *.pyc
 *$py.class
-
+*.pyx
+**c
+*.so
+*.cpp
+*.h
+*.o
 
 # Pycharm
 .idea/*
@@ -10,3 +15,4 @@ __pycache__/
 # results dir
 /results
 /files
+/wandb
