--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Byte-compiled / optimized / DLL files
+.history/
 __pycache__/
 *.pyc
 *$py.class
@@ -8,6 +9,7 @@ __pycache__/
 *.cpp
 *.h
 *.o
+**.png
 
 # Pycharm
 .idea/*
